[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/DescriptionFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Components/Fadelabel/Label.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2.82843, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.8 ),
"transitions": PoolRealArray( 0.535887, 1, 0.535887 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[node name="LabelContainer" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 303.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 1 )
text = "Once upon a time,
there was a bunny...."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 2 )
anims/Idle = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="HideTimer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HideTimer" to="." method="_on_HideTimer_timeout"]
